more sonar issues
Signed-off-by: Sebastian Hoß <seb@xn--ho-hia.de>